fixes user pic and username alignment, initial tidying of CSS

--- a/threemix-frontend/src/index.css
+++ b/threemix-frontend/src/index.css
@@ -12,96 +12,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/* 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-} */
-
-/* h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-} */
-
-/* button {
-  border-radius: 8px;
-  border: 3.5px solid;
-  border-color: #09f1b8;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 700;
-  font-family: inherit;
-  background-color: #fff;
-  color:#000119;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  margin: 0.2em;
-} */
-
-button:hover {
-  /* border-color: #646cff; */
-}
-/* 
-  background: none;
-  border: 2px solid;
-  font: inherit;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 1em 2em;
-
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color; 
-}*/
-/* 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-
-  .fill:hover,
-.fill:focus {
-  box-shadow: inset 0 0 0 2em var(--hover);
-  color: #a972cb;
-} */
-
-/* .profile-header {
-  position: absolute;
-  top: 10%;
-  right: 10%;
-  display: grid;
-  grid-column: 10/13;
-  font-weight: bold;
- }
-
-.profile-pic {
-  border-radius: 50%;
-  width: 66px;
-  margin-left: 15px;
-} */
-
-
 
 /* trying font stuff */
 @use postcss-preset-env {
@@ -115,10 +25,6 @@ button:focus-visible {
   --font-weight: 700;
   --letter-spacing: calc(1em / 8);
 }
-
-/* * {
-  box-sizing: border-box;
-} */
 
 body {
   background-color: var(--color-background);
@@ -151,7 +57,6 @@ h4 {
 .profile-pic {
   border-radius: 50%;
   width: 66px;
-  /* margin-left: 15px; */
 }
 
 /* GRID STUFF */
@@ -161,9 +66,7 @@ h4 {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
   height: 90vh;
-  /* width: 90%; */
   gap: 10px;
-  /* margin:20px auto; */
  }
 
 .app-name-container {
@@ -176,24 +79,16 @@ h4 {
   grid-column: 1 / 6;
   grid-row: 1/3;
   display: flex;
-  /* display: inline-block; */
 }
 
 .app-name-container h1 {
   font-size: var(--font-size);
   transition-property: font-size, grid-column;
   transition-duration: 1s;
-
 }
 
 .app-name-container.small h1 {
   font-size: calc(var(--font-size)/3);
-}
-.app-name-container.small h4 {
-  
-}
-.app-name {
-  
 }
 
 .spotify {
@@ -201,15 +96,6 @@ h4 {
   vertical-align: middle;
   margin-bottom: 2.5px;
 }
-
-
-/* .app-name {
-  display: grid;
-  grid-column: 3 / 11;
-  grid-row: 2/3;
-  justify-items: center;
-  align-items: center;
-} */
 
 .app-tagline {
   margin-top: -2cqw;
@@ -221,35 +107,28 @@ h4 {
 }
 
 .profile-header {
-  /* position: absolute;
-  top: 10%;
-  right: 10%; */
-  display: grid;
-  grid-column: 8/13;
+  display: flex;
+  grid-column: 11/12;
   grid-row: 1/2;
   font-weight: bold;
   align-self: flex-end;
+  justify-self:last baseline;
 }
 
 .profile-pic {
   display: grid;
-  grid-column: 11/12;
+  grid-column: 12/13;
   grid-row: 1/2;
-
-  /* margin-left: 15px; */
 }
 
 .logout-butt {
   display: grid;
   grid-column: 12/13;
   grid-row: 1/2;
-
-  /* margin-left: 15px; */
 }
 
 .dropdown {
   text-align: left;
-  /* float: left; */
   grid-row: 2/3;
   grid-column: 11/13;
 }
@@ -271,10 +150,8 @@ h4 {
   grid-row: 1fr 1fr;
   grid-column: 4/9;
   grid-row: 5/6;
-  /* margin: auto; */
   justify-items: center;
   align-items: center;
-  /* max-width: 40%; */
   gap: 2px;
 }
 
